# dify_ovh_ai_endpoints

./: .difyignore  .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  plugin-auto-pr.yml
models/: common_openai.py  ovh_credentials.py  ovh_errors.py
models/llm/: Meta-Llama-3_3-70B-Instruct.yaml  Mistral-7B-Instruct-v0.3.yaml  Mistral-Nemo-Instruct-2407.yaml  Mistral-Small-3.2-24B-Instruct-2506.yaml  Qwen2.5-VL-72B-Instruct.yaml  Qwen3-32B.yaml  Qwen3-Coder-30B-A3B-Instruct.yaml  Qwen3Guard-Gen-0.6B.yaml  Qwen3Guard-Gen-8B.yaml  _position.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  llm.py
models/moderation/: Qwen3Guard-Gen-0.6B.yaml  Qwen3Guard-Gen-8B.yaml  _position.yaml  moderation.py
models/speech2text/: speech2text.py  whisper-large-v3-turbo.yaml  whisper-large-v3.yaml
models/text_embedding/: Qwen3-Embedding-8B.yaml  bge-m3.yaml  bge-multilingual-gemma2.yaml  text_embedding.py
models/tts/: nvr-tts-de-de.yaml  nvr-tts-en-us.yaml  nvr-tts-es-es.yaml  nvr-tts-it-it.yaml  tts.py
provider/: ovh_ai_endpoints.py  ovh_ai_endpoints.yaml
tests/: test_live_ovh_models.py
