[project]
name = "ovh-ai-endpoints"
version = "1.0.0"
description = "Dify model provider for OVH AI Endpoints"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify-plugin==0.7.4",
    "httpx==0.28.1",
    "pydub==0.25.1",
]

# uv run black . -C -l 100
# uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
